feat: Add precompile data fields in Trace Frames
 -- Used by CallTracer to detect and populate precompile calls

Signed-off-by: Usman Saleem <usman@usmans.info>