@@ -163,7 +163,10 @@ public class DebugOperationTracer implements OperationTracer {
               Optional.empty());
       traceFrames.add(traceFrame);
     }
-    traceFrames.get(traceFrames.size() - 1).setPrecompiledGasCost(OptionalLong.of(gasRequirement));
+    final TraceFrame lastTraceFrame = traceFrames.getLast();
+    lastTraceFrame.setPrecompiledGasCost(OptionalLong.of(gasRequirement));
+    lastTraceFrame.setPrecompileIOData(
+        frame.getRecipientAddress(), frame.getInputData().copy(), output);
   }
 
   @Override
